<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    style="@style/Widget.App.Card.Fantasy"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/character_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:textColor="@color/colorTextLight"
            android:fontFamily="@font/font_family"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/a_picture_of_a_character" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/colorTextLight"
            android:fontFamily="@font/font_family"
            app:layout_constraintStart_toEndOf="@+id/character_image"
            app:layout_constraintTop_toTopOf="@+id/character_image"
            android:text="@string/title" />

        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/colorTextLight"
            android:fontFamily="@font/font_family"
            app:layout_constraintStart_toEndOf="@+id/character_image"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:text="@string/full_name" />

        <TextView
            android:id="@+id/family"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/colorTextLight"
            android:fontFamily="@font/font_family"
            app:layout_constraintStart_toEndOf="@+id/character_image"
            app:layout_constraintTop_toBottomOf="@+id/full_name"
            android:text="@string/family" />

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/colorTextLight"
            android:fontFamily="@font/font_family"
            app:layout_constraintStart_toEndOf="@+id/character_image"
            app:layout_constraintTop_toBottomOf="@+id/family"
            android:text="@string/id" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
